@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst prepare unpack
-DEPEND=sys-fs/e2fsprogs selinux? ( sys-libs/libselinux )
-DESCRIPTION=Gentoo automatic kernel building scripts
-EAPI=5
-HOMEPAGE=http://www.gentoo.org
-IUSE=crypt cryptsetup ibm selinux
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86
-LICENSE=GPL-2
-RDEPEND=sys-fs/e2fsprogs selinux? ( sys-libs/libselinux ) cryptsetup? ( sys-fs/cryptsetup ) app-arch/cpio >=app-misc/pax-utils-0.2.1 !<sys-apps/openrc-0.9.9
-SLOT=0
-SRC_URI=mirror://gentoo/genkernel-3.4.51.1.tar.bz2 http://packages.gentooexperimental.org/genkernel/config.amd64 http://packages.gentooexperimental.org/genkernel/config.x86 http://people.redhat.com/~heinzm/sw/dmraid/src/dmraid-1.0.0.rc16-3.tar.bz2 http://people.redhat.com/~heinzm/sw/dmraid/src/old/dmraid-1.0.0.rc16-3.tar.bz2 mirror://kernel/linux/utils/raid/mdadm/mdadm-3.1.5.tar.bz2 ftp://sources.redhat.com/pub/lvm2/LVM2.2.02.88.tgz ftp://sources.redhat.com/pub/lvm2/old/LVM2.2.02.88.tgz http://www.busybox.net/downloads/busybox-1.20.2.tar.bz2 http://www.open-iscsi.org/bits/open-iscsi-2.0-872.tar.gz mirror://sourceforge/fuse/fuse-2.8.6.tar.gz http://podgorny.cz/unionfs-fuse/releases/unionfs-fuse-0.24.tar.bz2 mirror://gnupg/gnupg/gnupg-1.4.11.tar.bz2
-_eclasses_=bash-completion-r1	db412e427e3317ffd3e15f17df269c5e	eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=1ae2645e8633f88377751b5cd602d744
