@@ -9,7 +9,7 @@ AUX generate-rndc-key.sh 183 SHA256 7d9c010a62db7561770fefdfb557bdae17f18835e62b
 AUX localhost.zone-r3 426 SHA256 3f39e9b5be72435e961cd6f5acdfe396b05640bf370969acf918a939575122bc SHA512 979d8693046033c24490dca536f0d649795bbdf57eed32017b32d07d7d3c51b35197e4edd79d8258074a1bf14b71376472ba6ae749f62ceaf74d7a6a0559fa89 WHIRLPOOL 0b7bba480e8bb8cc61e0c9efe2eaba4288fd05b9ae6aeda5e691ad50fc2741bc19b7669a4de56821de2a792df0fe4501d98ff92287dc79cc0bdf766526d365bd
 AUX named.cache 3048 SHA256 2e19682ad79bee201e3fc0454b73d45d04be7ba7dceb28612ec71fff0add6de4 SHA512 f84a7c83b424fa59126617062c1442dd8fb28905cd082f5f60087da03fe0e10c55a2c20fc398d9c69af7c1f75f7c72f78f4c203503cf51a6c06be22df8132996 WHIRLPOOL 6d3a843535cd0685703b99474be5eb599ba13b81be98d337236ef826e672aa534d4cdf4fe54f3aa0e838c8e7568a4201764c423d3bb490a9f842c446a58c1722
 AUX named.conf-r7 4116 SHA256 4aa2617f7990101d3262d0422636c5d967e78be6ee2582568e31680684dd9948 SHA512 3e1cea45ddb9df92658c35948eb00bd823087af0d48102751edf1c248e7d6c1ae03aa2a1b7d1d0ce3d7837219ff4c2e05cbb7f299caaa97688ca876f2b0af80b WHIRLPOOL e26b4be274f4b072485dbe247f4ba226ce379551e285fc133dd21b2e49179c12d0ff32600fd86b0085cc333283d5c6301758a5d929dce65e41c552d6ab6d01c5
-AUX named.conf-r8 4021 SHA256 146823f9d39adddb6fb893b2ec81a162a97d266ab365a14e497096154f17cd41 SHA512 36bd7a0d1be975fb837c6fb88f77fe36dcab7ce25b6f50d09d684d4055e8480e3878fcf434be0493e76e1d2ae3c4767b1dfb4e52ea7d0b2a5c639945e516deec WHIRLPOOL a0d9bdfbba73a270c6264a61e4fca0c8230fbb1a47050415a136636451cb7aea276aa4ea4ad1b7b36dd879d3bfeeb517c060241a28bc7a0bd8e806f434a91303
+AUX named.conf-r8 4020 SHA256 c1f93d78f46aa6a562d1530ae1697d16fe9020435b835e192cafcb66ff22d7fc SHA512 60ab117e488604810a6e42a627eae465f6241208e726e763127f84102d05a661cceeddd00bc9d8d92c3da7d73d034ef876ace6744a0516b2bcadbaff1d9c82ad WHIRLPOOL 005f5185451a5a20ab9f7d5e0374b051e051315f6a28245241c74bfc1d6a6f3ca2b742a2a774a8dd6e04cef887c69b07bbef31896db02031bdf3e99569274178
 AUX named.confd-r7 1364 SHA256 3cf1ab72446cb9417de916e4cd732f2056fb74d2c6f03da6741b7bae8c415448 SHA512 68fa7c8963ac59349de3d05972c07aa0123b7bebbe0ba9604463ccfd1b377c2babe01eed4745cbe0f7d3831d1b47c2fa620f8092c67465fb771cae4932b0861a WHIRLPOOL 53ae821e10b8ee9becc265030a1cd7758706c1348ffe857edfde744d3214dbc0d648550d83801f4340fe06884ac8edaddbf2e39b8440d007c36b0895f201609a
 AUX named.init-r13 6083 SHA256 55024fe0e2b491b5cb490a9f575bad3096d446f20f8d52778d778fd26a415d52 SHA512 9d557b1b30989b21d9ae9c3f4e2a886f59de728cd5893a7538be3bc424bf17b249165ed939c87db02f0b760faf46a5503c5bf523386b84ddfe8128e76f79930b WHIRLPOOL 8566abd7dda75fd3be7f3cf21baec149ce280a78ea400709272e6ad419417c14f6b1bc859ae2809a44c24aab382d6e6d10323c8df430884d306243275c35d77d
 AUX named.service-r1 327 SHA256 5c57f181cbb153fe6beb9385c56b874ea56afc19cca105ea3c5cadf2138c349d SHA512 1d3dbf9d1de0c23c398a523b05c0fb266b6b699e54d232818b28205f697ca227acae9f2778d6f41309b117a6cd78eee170b745594b786b1c1571d5f66d6c3de4 WHIRLPOOL fbfbb8ec1bd7bf1796be0daa66ec0918b175f3953b0312c492a09097f4e7c9b60d303330f525c03d1aa7b0934c2bc134e90800afb7e40e06f77f865c8710dd66
@@ -24,16 +24,16 @@ DIST dyndns-samples.tbz2 22866 SHA256 92fb06a92ca99cbbe96b90bcca229ef9c12397db57
 EBUILD bind-9.10.0_p2.ebuild 12153 SHA256 1b85603720eb45dd1324c0e2bb5fbce30fc6c4a253436c65212980d64f5e9e55 SHA512 0f6a690637fb96e39500c5af9d2a2c7ef2bbe51b9e9327984ca5fcf66e6a63f5581a95fa92a8c73427d171c5be7053bea1cd7102b22b93818cc4ac28e77d8f9c WHIRLPOOL 01b7ab0f1460299215215264bc1ef2b8edff1b02cbffa8fe83cde6f7163d922c0878037cf7085f61331654a2ede4573f3a3e8cc51eb0355487466ba0c8b8ce43
 EBUILD bind-9.9.5-r3.ebuild 13831 SHA256 db4518468e066cad4611b3decfa393e086f1f48d3a4942ac7a8f8f47638542ec SHA512 7667abaae2586bc35b63e03d02e42ed61901c7e4ad00b8ade9011cc5e8be64442c2303b741cc78617a3a9b4b936bb7a32a00c213d7436a5fa9bee68cabf9dcdd WHIRLPOOL f9a4cc48cd840c453562c41cf1fea00ff1c224862d3bb7f96017e1faa3b35a2ff45552cdbe8b6b89ba099333f51ebd5b246062c9613aef6bfbf2b6e8c4b76e8c
 EBUILD bind-9.9.5_p1.ebuild 12823 SHA256 8aeb449fce5a3927e1da3dd43df39ab802643fb8869341d005b4224d3970bf8b SHA512 4e4485145c373bb6b187b6c713e77a8aa65ac457a05cfba2df30f18ac3c25b2d37af7f577a08727855e0f4f69ab0722da8647303b580f87fbc0ea38910f2fe88 WHIRLPOOL 29e694f228b1058da09bd399607787a1f0852c935e1412e573513d50c5c377a9aa750b922a22d84e15b68b6936feedcd6eca2b74aac01140ebc3b93572eb6882
-MISC ChangeLog 80392 SHA256 9fedbf4449a9a89faa0ad27d2a86523ebb2ae4a43219808d577c7fa7b7d8fa0e SHA512 55754c47ab52f6e7e02a2afb6a514fa117dd92c86d16e51155564032bf6fa4dfdcf4d9e308001b8414100490ce5234be1603a77bc9ea03531d4455e50ea9c0ee WHIRLPOOL 509a2ff1564fce850877883a42f307616c65698d2ef8003425d5d84e52f24a03be79c2e6864632e73c58bba0a108bcdbe736e871b8ac63bd7bd7faef04ba6ecc
+MISC ChangeLog 80499 SHA256 948aa1d8ed52f5f68dc122e90e82b8c712ae711f36732ceacb5a2e8f8c8785b9 SHA512 9240e9ace7968ade8f264b8d754c02a40061838e0ce94377957e3b6156fc4b41bdfb427f920faa8b91c88c3f818c223552079cab13e9ba81a9020daba3b89502 WHIRLPOOL a88d70f7dc30cb4cc2635adc2842e43c98adddb797f07bd54319d37ac53e4be5a4072057fab5f46a66bc3db80cece07dac481d8488083e82c0ab81f0ec85516a
 MISC metadata.xml 990 SHA256 83944dc5d561460b8e06f9117ea79ab33fd9676f25e8199428a8c505c8e7e9f7 SHA512 fd513f335dfa301d5a2cb973f3508e95d2cdd6db8d5af11d9d420690fdb29856f9476f59e13ce4a2e73da39b091cf50b688fea68ef159c3cf10b4dfa8ecba05f WHIRLPOOL 1630de584bb3969e8f2aa48d438a4fb868edf33f007d26baf37cdd0ffac3a7ae81a1d859d68374888e27737d9fd30b96fcad2c241f936b25b5fe4a5e87f45ddc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJT76QCAAoJEMOx0zmdw4Z1p1QIAJc128MAOVxSkNTpQ58vFIuv
-BBNfcuxFiPNlEurCOjBE89qaPmeOP37ua3Kbg7ACEGfH6j6LuUaWLnld1BSCRV62
-rY9nH4K1k8C5QmOf+rRlPav+TenmUCw1THarvTWxjrJI0H7GhK05j51Xp0hUQdEU
-lvV1Xkp44dJSo+Yvg2vRXmGHMXB4sVdEb8OKSSN38kX1lHZbuat/YCrRiQt6UTMA
-B+XEd36ldbKYKxCAAdtES9TTmiYrNFB2bPFn/PAjX97fSXyaDVEXRLg4kYs0wi/i
-8/phFnEZpE/zQxLfwCS5j8VzhFS7nz7J8w93BbFXsLZLr0ij0k/JpytRtl+gsqk=
-=BEpt
+iQEcBAEBCAAGBQJT8QSVAAoJEMOx0zmdw4Z1fZEH/i1uqghbEAGZFwPSroYyJ9H8
+BH7xhgynHryWbRpOBzyB+KCuLzJhmdlTNSKSM5lIXQEV2nPk3OsC5Xf/YNhM6FfW
+jalKIsrSgH1gJD8OgAQgPZVGTDt+v32eC/Y1hKzRfsQtPQdAWqRWSJdCqDK6nSQr
+XlOKAssr2paLFpRUt0AFrdBeQ7u6eyPqrm6BOoCC+rkzLE78dziv8qIsTMiTv0Pt
+mPW5n50jyD5flbkirtPk/cnGbMTh7tkvaMV8XcjGIV6qFrB2eCPKQO+leaxiObDD
+ZJ0kq7Pma+LLqfBE/3j/Ktm1OGw36DN//x68Hml8gZe3nfj4xzuHrd5e+Q5l9aA=
+=DU06
 -----END PGP SIGNATURE-----
