@@ -1,6 +1,6 @@
 /*
  * Refer to the named.conf(5) and named(8) man pages, and the documentation
- * in /usr/share/doc/bind-*/ for more details.
+ * in /usr/share/doc/bind-* for more details.
  * Online versions of the documentation can be found here:
  * https://kb.isc.org/article/AA-01031
  *
