@@ -1,9 +1,10 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX genkernel.bash 2438 SHA256 e7de9771ba79ef878e2c9a21a1c1720f092c6047d3cc7d4a49ff6b90e7e2c248 SHA512 2bfe23606f919577bb2d174ffe18cd00fbb4ce642fb8860b319e059745d46ff8459b99374159f78af9f3aebb0a352a74ccd74c3be581980f5e298293b96e983d WHIRLPOOL 71a6be56d38c24c3032fec5f4016c92dd0bc8140e5204db9d97c5cc5be42a2465282f36e213858b528d013ff74c6bcbf9aa443a77a8ed3ce8174baa79afe6004
 AUX initramfs.mounts 816 SHA256 57ba8450e3f09edc9a4e5a1be15d49c77e4e014e27c626e9e3771167cbb54e49 SHA512 97e5f92d135cff3911a68c7f1afd0f781ec1c1b794cdc824d74f8c119104ecb40bd7180be8414dc72f3a5a811143d6b4bf443ac1d3ff7a71b1e88cbf7c179665 WHIRLPOOL f39d27de6e69b3555f81138a59f25b104f9dd6aa6254a5391d3375b15acaac48f0e698f3e6f96ed88845b84fbf8fa2cd64b98281df977c12a99ec7d9ddaf2a10
 DIST LVM2.2.02.88.tgz 1029151 SHA256 a129d1d3949524da7d6d2a67218254baea02df06a6744faa5808a4182b2fb432 SHA512 5c334c2c78220f4f9f082a74cbf0b156e96f2a07b5e55f054ff70c752ada97a67f83fa1d89c02accb7cbe5a62e356588831d96a102b7bf16cdce2591d4e37e4b WHIRLPOOL b30a1f2403e71ff6fb381ec82291018632e1d10258dd615efae4e39077a304a66271013247793390f57c26886599d8bad8f4b896d230f3e4f846e74c12282f71
 DIST busybox-1.20.2.tar.bz2 2186738 SHA256 eb13ff01dae5618ead2ef6f92ba879e9e0390f9583bd545d8789d27cf39b6882 SHA512 089b67cd920f332daf910711739b1e55ba4c76cfa2122dfe5464432e0d76d3af8327837ebc3cc9954deef3e8f766d16a1928aecb2c169fe3de5a722eea7ea3dd WHIRLPOOL aa8fec92d0ac8bb246dea7353537d425a5fecfa0bb807d0e291c7351e8289b84aab83303c45b75f9b7a98cd10177e210511064f0709425c2f84b069fe6a06420
-DIST config.amd64 115573 SHA256 13c96b71e4738e82045f9f84be0476e2b91de5c6a4955337830792091cc26dcd SHA512 a071517894e8f6b1a0e55b8293ccdc524377de1e7b96fb12dd7f822e881beebd8a131648980197c28278aa638ea05fa2ebb47f6675fabd42d1d03eb7c8bc90b5 WHIRLPOOL 30fd90ff32b7606215cae6c26db509a8ea25a7033fa0f7b7dc9f292dc4a4bbf30f022d65c24806269ee1e53116736477b6908d31d400550715a62876095f348e
-DIST config.x86 116495 SHA256 2fb23e7f82c1339980ba1a1e78407b55b25705bbf9602e794fc4094a054f8c19 SHA512 cac6d1b72da85d251ef8dd915b0c5d8123c56de62aad893d9a7dbf6190b6a8d721467934a1fd819ba6bfad83b83245b419050f04d9b07198c6a5510d18e30cb5 WHIRLPOOL d8e69687c8e53f9e2082c9b6fe7e6559395a69a58374f40443ee2c579d9011f6734d978457f31bd4a60c112c6e12ed37fd71563e534d4ed1b4961af60045d5aa
 DIST dmraid-1.0.0.rc16-3.tar.bz2 232743 SHA256 93421bd169d71ff5e7d2db95b62b030bfa205a12010b6468dcdef80337d6fbd8 SHA512 7c45e5117adc52fc2094b1b2bad4f4c518a46317a2196611966d72085ba3587c4ac8d1080f9d934888c01788f2b2d3d621c6f0d3e2a023c0fb1f9f3fa7fc127e WHIRLPOOL 87915ea0013766da8a9722b437bfe146b4b2c7560a7814ac6caab92054ddc3b4b59ceb4d413609d5eaab92b5cee67886ade7924455f1dba19f1b8dabc25d3498
 DIST fuse-2.8.6.tar.gz 505334 SHA256 1ec1913e38f09b2a9ec1579e1800805b5e2c747d1dce515e316dbb665ca139d6 SHA512 03cacc45c8ba6700fcdfa9064ef4e10d3ad6fc0e4fc49d41693de2caf03d44513d449b00a7c5d200d055d9481821252509259f5f3d2d6127fa51957a006a90fd WHIRLPOOL 668c01f5ae9742f3e70248d6d2b57cbeaa0decf93d5f7987550fe54d4ebdb6e445ff841e8d36a60a4824c114651b8a93b118e15b8a00ac30ddc813e583fa2b51
 DIST genkernel-3.4.45.1.tar.bz2 265391 SHA256 8285aff3b27a56a2bbb9c8d91d8c8332f8fc15df7eb892f618859a5a74f92981 SHA512 4333cb4d2eceb8d25bd7e86c0a9cc11576926eceabed9e00a52ab6e3b341a8beb0c83e61bf1ffb5e865956d54be145f971a89a992496837f539def449efde3a4 WHIRLPOOL 3e9d94e7e6a3836ee327cb53eef746904eb2a146375508ca3f5cf25dfcb2ee98e7b23dd21aae3d3bd370630354a4ea86e2c0e50d3394b61ca82b4e63b3c99676
@@ -13,6 +14,7 @@ DIST genkernel-3.4.49.2.tar.bz2 266427 SHA256 62ade4f83cefc2278e1dc7cf1456974b03
 DIST genkernel-3.4.49.tar.bz2 289872 SHA256 7212b1c80e63db9949f2a72f160b06ece6d886980aee5c165050e92b400bcd49 SHA512 4116656544d8bb30f79a86366dae58f8c52942ce831b4e3d263b103dfb76afb92d22bc44038212c53285b0ab5803d7931a4a5e9595b275f0f254c22249eddff4 WHIRLPOOL 27c7db14abe33fc5546c95681d7e14ed9d364457e2df0bf3f6d98bf9afcc3e0fdfc743ac0b645b2421aefe950ff4b6b30d4a6eab3b15a787e3b0faca100a5bd5
 DIST genkernel-3.4.50.tar.bz2 273874 SHA256 d1450b9a38837147f3ec2600bcd05a56df5537a1d9de0c41db123833a5f2f450 SHA512 8b56c0736abaffa1c04dd1315d38ed35be46b72a2e20b5602e946dbabde9c05a66691d3059306f58a17f436124912dd0b39ccc012fff8562b1531cfcb90e7d28 WHIRLPOOL 09d88f2013267021e792b784850057472b40d216b45c8cd8f67c9340c30ee4cdf8161beaa7fd628fb71755a35fed6e64adddd9b957f5c5b7698207fb70d4a7e4
 DIST genkernel-3.4.51.1.tar.bz2 294870 SHA256 af99c3f5dc1885b3c362e2fe1e4b7557b6ff2f55b8ce63b3681b1051fe3e4441 SHA512 a72378965fdc23be3e5af6c612502a38c89ae1be52f3baa82cc6ea17871a5f7c48515e55cf448d0288acf6d8cba012fb4f44e5219f5a69f942cec49dbaed31e0 WHIRLPOOL de229d1e6441d7ce25e8cf7180ebae27a591326058c8dcadb8f6054fc985a5f1d73fa97ea061d0bc8007c98b23b5c97a553f6b97cbc503e145864b43baa81e8f
+DIST genkernel-3.4.51.2.tar.bz2 291001 SHA256 579989eaaf1c87686b3bf2d315acad8e3d3d9c64c06f78ae67555a3636276671 SHA512 1eb3ffff251c5ed84d91059a3af1460ad80702e28353c9e5e206615810168d83c097fbe34e28a774caf435e873fc758afd1a16e996dc93b6a2384ee050b4eb71 WHIRLPOOL b60f4ff9667b6dd2f9b73fb5bb63c81a8ce72db367b779188b587c38a95d69ae6fc96dcdaae57456bfec3832706edf6254ca2f4a2c135f088c0cd22d86322e9f
 DIST genkernel-3.4.51.tar.bz2 273918 SHA256 6256510fa8966e8d6929f66679a1af249aacc564c91c9869decbab0a2f789bd7 SHA512 0a845e9ff0aeb15c75faaf0c1aac80e79ce30c0a907e3e028e0f3feb66e34005991a7b5e82b2281c60bf857f77b15c3d405cf698375caf398fc8e9d7504326d1 WHIRLPOOL 1e28036c2eabd3eb7ed4017347c1f6a44cba0ce2202898f19d3332e3217a65e9e6500b5ddb30774007d222422fe6218de93a1efc12eb6f33171a42b07722b33d
 DIST gnupg-1.4.11.tar.bz2 3407075 SHA256 d18ceeac16e554a501170b9bfde611625252d0fe9448685a69c93bf149ee6ef6 SHA512 97e7b8b0f972cc2f7cabdb0e013cbee1c33e7d48407d040cca5c2037e32abe1c2100194be7d3b569d4f05eb16b24c205a5b83f06718f0241f8d4ee174f1c37ae WHIRLPOOL 6f914627e2f527f6616e1f99d2ae06942b734f839d03a45ffa45bf67516a81d58f89e6a85612cf8e5fd83be04ab0b6bc2da8f81114143dad7523e5fcea62366b
 DIST mdadm-3.1.5.tar.bz2 292709 SHA256 1d547d0b36a88968e9fc9fb08b0e64de54a53f3d1cfa3656a9f319180f0727d3 SHA512 6fcf426d63ede01f99ebeee9be686857a04f9b601b37f76722c091ae2999b3ff66fdba52d47323f27900553125a897fc1815fe7be850aa9cc991dd5fa91a5d5d WHIRLPOOL 003595a1338b3a95ccc176b07a31f26dd5fda9460f2c4d3513b9ca09cdab1c91dab05f8914f2354047fccff42c4dcfc6131a383c84467c2838ac7b1af2f9bef8
@@ -24,10 +26,27 @@ EBUILD genkernel-3.4.49.1.ebuild 5288 SHA256 f99c85736c95df637bef0a3b7bbefc473aa
 EBUILD genkernel-3.4.49.2.ebuild 5301 SHA256 2a3ef5efa2878febbc0d16070400dc05c16ea4f7a245cfc58ac5618ed360f81f SHA512 3bbb60b949d61d4d9f69360d7ae196238cd5b2ecf4c1f33cf3614dc64b86d43241730214cdb1fdb89ced6747c183d5f028327dbbd8da3008fe0739bb4a2c65d0 WHIRLPOOL 43981b541ef9607ed238dfa65f9d0aa5ff35baee2ee4b7b34dd71152c7fb8431a6dbd2c5d1b0126cfab1702b99cd61eb0d4392f8b76c1f4fa0beb70a1fbed7a2
 EBUILD genkernel-3.4.49.ebuild 5286 SHA256 ceeb831a96a059191a6f5c6c89f81a4954bea36f00e8febf8e88f03bab33a0d2 SHA512 a7cf79f96f78103d566068e53ef2486206422705dfdf094a4bd5ec7f75118094e1efb81925d45467aadd434c995f35d2d7cb72f9e9f7f8f2490bd7a9b412f2fc WHIRLPOOL 13fc1da5f4e263b3174c43590a5beb6cc9e0fdd3d458dda199b788e810150427a7d96a0c3ac105dd2d036de6f9dc3cb697efe17a19d63099053c68fc43104099
 EBUILD genkernel-3.4.50.ebuild 5251 SHA256 1b36cb36f3bf9d0967773c7aaec635013078a0384853642346cab83efe136f8f SHA512 b0dae5926f5760610ce90f8e570a47066e62f0e3b1160eeb940bc66ebedb2c931fb17675d91220b876b75fa1b85dab4d31b7f606dcd586a7e33a0b706e3b5964 WHIRLPOOL bd481b450010c29f91e69738f1d5280d13a7eb7861297fe29ec1421d9f28fadea8c7d1007cf9683ddeb938004b0dc5cb2cedd2324c3acc0e05f2296739e59d74
-EBUILD genkernel-3.4.51.1-r1.ebuild 5587 SHA256 c836e1741b4f17463c0d624078db9f5fb03f692693ab4d93eac732c09b5beb86 SHA512 2f8ac96b9cb80793a4b486b8adceafa1aaa8f3c34b6140e96790d19b9dfa1aaf9196ad1234078f673c6be4517ebd2cbf0ac4789635eb34fed953ef7528d8b530 WHIRLPOOL 805bfcdc795fdad7348b11058035e66a2a4e26080c27cbf8808482c81e7541609fd3384054d9ede2398a4c3183dd9ea3b2e64b68c1368714327a882e97e3d137
 EBUILD genkernel-3.4.51.1.ebuild 5250 SHA256 1b6918ea550d151382d4e5e47d027d9ab4eb6bc666530f5238100381a7cacf4c SHA512 2f882c0d3229c8f3aa95a07824c3405e2b843f35ced95ce03867b064a6841a215022e90ec4530b04f8e39f17ca5c5d9b57b7f0c044aa41a4c01ce66f6eb70188 WHIRLPOOL c8c818b5fd691ec2249bacbd687af815bb05328d370ed0bdbcb20bed075088c5f14f40216cbc8c0484aa48864e18c109046430850f34729bba931e7156526c5d
+EBUILD genkernel-3.4.51.2.ebuild 5250 SHA256 294dd03be3931863f16bc8a1dee622429e0658666e3a578bff555e11f40ff3d7 SHA512 7114cdbfc7b84aea4256f1c9c26c81fccf810eb2963bbf97a13d4bfce4f9540c0e61b9718d96304e09fee9dfd318e5d6bb89d3988301ed8041824c5dc156501e WHIRLPOOL dbd25eb15cdac3175f794b4562f8c63319bcbe8216a08beec48d8240dd7f39ea366b1a9f723d2e799ca6dcdb7f53144fea3e7845b2cc03d332de25fd3f3d3c53
 EBUILD genkernel-3.4.51.ebuild 5251 SHA256 ef28264d954b0cd931178e5747daafc7b4271157d6f2a49af45497915f7f44dc SHA512 3597b39f73d0219d41b62ffe3dee15dc35a45b50c37ad6a6bcf63751246b5d1c8f785989a5cf306b6aef4860f7053e5eff34dccc7ea984c483f2c8703476d548 WHIRLPOOL 0714fe7a7518d0cd3076e00a3ac592bb1577c9466b711b7008f339984e2e5caf9962ac162ef0e5467042f334e1d1f2f42bc6da1add969ffc5324b81049364b12
 EBUILD genkernel-9999-r1.ebuild 4718 SHA256 e3c6d2f50d82e6eedb75bbf896e1669532672948b2d6a494ee50200f6c2a89f7 SHA512 61eaaf0dab58cb3f48d70d7ce547f29112e0651683c363e17f55c0132fb26c647ab32702eab835089f5c1f0aec3915882a6531c7bf55b358b803c38275639b80 WHIRLPOOL cd066e85dc2ca98f9d168dcbfa1204b3c4c603b46f6bd5e9adc8a1707deb73bc27b3d5029687ee3ac865dbd8c004a0b03139268d1c402582818edfc16235a690
 EBUILD genkernel-9999.ebuild 5250 SHA256 95726b13862f5f9e42e8c70113b332ea0c1ec98d4e548ffd638f34540b338dad SHA512 31a10ad3c56940ea9e5a5ae83bd4ba97df654e214e7496843dfca6b004da630d2e4378d2583cb8015970e55bf1e12f155f5a91740f45cf10fd8470ff389bfed8 WHIRLPOOL a20fff14c5ee09d156066818617ab922f3242d11fb0e0c48f33d927f50916a7de6dfd3943a7a700421622413eaa87fb758f2863949cfd05f3a88e5c913bc0632
-MISC ChangeLog 72339 SHA256 a6708b7e6333b45c8c876d7bed4d404eb88c822f5d815d1c9f10d3bb1703e735 SHA512 7e72847ea7a48547c0acb7562168724063469aabcfa38f8f3f001ffe81f915ec9999796637e884dc822de1700a0c0315d98c1ed22696f08827227b5824eb9ec0 WHIRLPOOL c545bf46fb17e5d0c0f035cee5d5ab2fa2485ee5d875cd2476df0306d5990989e980a16f68e57b8ee3fb21e27e38ce80e47c8b889b73456377eff59dfb3cd965
+MISC ChangeLog 72518 SHA256 0ad1a747fd64dbc0cf7406870208c8d92e0fe021d462e023fb35aea3d9f15e73 SHA512 bfa7537cab50d5574d2d3e7f39e98eabcbd0762c11f615da44e8283e126211616be400b2fa7ad6f4b9655d019d1f5c6a46d38eceda63f94ef6dc3463ed4c8ed7 WHIRLPOOL 68421ee959c799eadcccec0c52c79ce22827a53396ed74d661a04d26e743c925b0bc631536e812043e2bd7f3727620534afd3f536107a228e07db9f214d74938
 MISC metadata.xml 418 SHA256 f91e9ba1b91a9fdde45041ae7557aace44c916ab51caecb6b1f49e115510f2cf SHA512 ae3e50da1b8e3f40e88e0a9a735bd736910ffb926f2a16ab34414b44d90d3399a6aa18e7c472194d4d1f9aadad934532a40a2287f41f442b25ac37835c99dda1 WHIRLPOOL 4a540b3702ac7abfdc275dfe371de24de378fb29c9ea3ec878b33edfcce9f1204b255c93373867e74c6d204e44c5ff1070dce0e96f527ef099914519800a51a4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJT8RAbAAoJECDuEZm+6ExkibcP/0iGvYVXAjJk+t3hYjsCOgkt
+YAdnfK6cJZIQaDrLtyqispjnKDnSwh/SdmcKcbUhQ2rVMAU8QvynKI1W0OCQOEpR
+xRAwF+zZPc/VlRNyrkwl9LmIahh0bhs5lHKpqkT7xMP4DIy91fTQU4bvRaiIpKpQ
+BLYSsbMT/xHtpb5XQbOhRH7i6h/vxa9lONGAPB+AFCC18B0fuQIXwTSfzDfdnMTk
+GfATbDWC3T7eSG/YloI0fiZrUttnwEuDmxyJpBcKWdmVizVnarFl9A/bPm6DgXpP
+mhZQcjOGCXzJiVEkiGr+7PKAGzjxDvcm3W3phevOZyZ858ni1+y+VJem2nIz6vlP
+sXRdG8e6b89bWf8liuxS7xZGyecOl/7Z+8JC0hFcb/CPFaBqVHa9pUmvuahJDEh3
+pKfoKwqMco7tUiIYi9SmUWA8NRLS5Sz8LMdWLc8XttPa2jHFzfX7rcN2OR6e6iUj
+RFd2hKKUHd+45yEF4hct0bkDD/Td74z7zvCs0JiWu1rmg/MYqyLeRLI0y6DJBTpQ
+KShw7/n+KCTNqJwQB5YpKzbPggxUwMTQkUGt/nD014UKWiYmBnIzZuNKr59CLF4H
+v4Pou5/SWv6PLS/ZqrLDSAQg5zV9DgwKCGCzuTc2ZH8aM+Uw2U8xQCyKPxPhweAd
+7XQioQQzhqWOFbD8GBhy
+=hUsj
+-----END PGP SIGNATURE-----
