@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/genkernel
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.395 2014/08/14 04:06:41 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.396 2014/08/17 20:27:08 ryao Exp $
+
+*genkernel-3.4.51.2 (17 Aug 2014)
+
+  17 Aug 2014; Richard Yao <ryao@gentoo.org> +genkernel-3.4.51.2.ebuild,
+  -genkernel-3.4.51.1-r1.ebuild:
+  Bump to 3.4.51.2 for #508362, #519298
 
 *genkernel-3.4.51.1-r1 (14 Aug 2014)
 
