@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/bind
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.503 2014/08/16 18:33:33 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.504 2014/08/17 19:37:53 idl0r Exp $
+
+  17 Aug 2014; Christian Ruppert <idl0r@gentoo.org> files/named.conf-r8:
+  Fix broken comment, bug 520136
 
   16 Aug 2014; Christian Ruppert <idl0r@gentoo.org> bind-9.10.0_p2.ebuild:
   Fix doc installation, bug 520008
